--- a/4100901-Final_Project-2024_01.ioc
+++ b/4100901-Final_Project-2024_01.ioc
@@ -39,8 +39,8 @@ Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
-MxCube.Version=6.11.1
-MxDb.Version=DB.6.0.111
+MxCube.Version=6.12.0
+MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -82,7 +82,7 @@ PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=LED_HEARTBEAT
+PA5.GPIO_Label=LD2
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
