--- a/4100901-Final_Project-2024_01.ioc
+++ b/4100901-Final_Project-2024_01.ioc
@@ -17,25 +17,26 @@ Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA1
 Mcu.Pin1=PA2
-Mcu.Pin10=PA8
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PB3 (JTDO-TRACESWO)
-Mcu.Pin14=PB4 (NJTRST)
-Mcu.Pin15=PB5
-Mcu.Pin16=PB6
-Mcu.Pin17=PB8
-Mcu.Pin18=PB9
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin10=PC7
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PB3 (JTDO-TRACESWO)
+Mcu.Pin15=PB4 (NJTRST)
+Mcu.Pin16=PB5
+Mcu.Pin17=PB6
+Mcu.Pin18=PB8
+Mcu.Pin19=PB9
 Mcu.Pin2=PA3
+Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
-Mcu.Pin5=PA7
-Mcu.Pin6=PC4
-Mcu.Pin7=PC5
-Mcu.Pin8=PB10
-Mcu.Pin9=PC7
-Mcu.PinsNb=20
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PC4
+Mcu.Pin8=PC5
+Mcu.Pin9=PB10
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -82,11 +83,15 @@ PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=LD2
+PA5.GPIO_Label=Room
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=Living
+PA6.Locked=true
+PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=LED_LEFT
+PA7.GPIO_Label=Bathroom
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -126,7 +131,7 @@ PB5.Locked=true
 PB5.PinState=GPIO_PIN_SET
 PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=LED_RIGHT
+PB6.GPIO_Label=Kitchen
 PB6.Locked=true
 PB6.Signal=GPIO_Output
 PB8.Locked=true
