--- a/4100901-Final_Project-2024_01.ioc
+++ b/4100901-Final_Project-2024_01.ioc
@@ -82,17 +82,20 @@ PA4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPXTI4
-PA5.GPIOParameters=GPIO_Label
+PA5.GPIOParameters=PinState,GPIO_Label
 PA5.GPIO_Label=Room
 PA5.Locked=true
+PA5.PinState=GPIO_PIN_SET
 PA5.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_Label
+PA6.GPIOParameters=PinState,GPIO_Label
 PA6.GPIO_Label=Living
 PA6.Locked=true
+PA6.PinState=GPIO_PIN_SET
 PA6.Signal=GPIO_Output
-PA7.GPIOParameters=GPIO_Label
+PA7.GPIOParameters=PinState,GPIO_Label
 PA7.GPIO_Label=Bathroom
 PA7.Locked=true
+PA7.PinState=GPIO_PIN_SET
 PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA8.GPIO_Label=COLUMN_2
@@ -130,9 +133,10 @@ PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB5.Locked=true
 PB5.PinState=GPIO_PIN_SET
 PB5.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_Label
+PB6.GPIOParameters=PinState,GPIO_Label
 PB6.GPIO_Label=Kitchen
 PB6.Locked=true
+PB6.PinState=GPIO_PIN_SET
 PB6.Signal=GPIO_Output
 PB8.Locked=true
 PB8.Mode=I2C
